<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userInfoActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:clickable="true"
            android:padding="5dp"
            android:src="?attr/actionModeCloseDrawable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="User Information"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_profile_pic"
                    android:layout_width="280dp"
                    android:layout_height="280dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_corner_shape"
                    android:src="@drawable/profile_pic"
                    android:clipToOutline="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical|end">

                    <ImageView
                        android:id="@+id/button_edit_profile_button"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="12dp"
                        android:clickable="true"
                        android:padding="8dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/pen_icon" />

                    <ImageView
                        android:id="@+id/upload_profile_button"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="12dp"
                        android:padding="8dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        app:srcCompat="@android:drawable/ic_menu_upload" />

                    <ImageView
                        android:id="@+id/delete_profile_button"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_marginLeft="12dp"
                        android:padding="8dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        app:srcCompat="@android:drawable/presence_busy" />

                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    app:boxBackgroundColor="#00FFFFFF"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Name"
                    android:textColorHint="@color/grey"
                    app:cursorErrorColor="@color/black"
                    app:helperTextTextColor="@color/grey"
                    app:counterMaxLength="20"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="match_parent"
                        android:focusable="true"
                        android:enabled="true"
                        android:focusableInTouchMode="true"
                        android:layout_height="match_parent"
                        android:maxLength="20"
                        android:textColor="@color/black"
                        app:errorIconDrawable="@drawable/baseline_error_outline_24"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Email"
                    android:textColorHint="@color/grey"
                    app:cursorErrorColor="@color/black"
                    app:boxBackgroundColor="#00FFFFFF"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:counterMaxLength="50"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputUserName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:enabled="true"
                        android:focusableInTouchMode="true"
                        android:maxLength="50"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/inputTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Phone Number"
                    android:textColorHint="@color/grey"
                    android:inputType="phone"
                    app:boxBackgroundColor="#00FFFFFF"
                    app:boxStrokeColor="@color/black"
                    app:counterEnabled="false"
                    app:counterMaxLength="12"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:cursorErrorColor="@color/black"
                    app:helperTextTextColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputHomepage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:enabled="true"
                        android:focusableInTouchMode="true"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/textInputHomepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Homepage"
                    app:boxBackgroundColor="#00FFFFFF"
                    android:textColorHint="@color/grey"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="2dp"
                    app:counterEnabled="false"
                    app:counterMaxLength="30"
                    app:endIconMode="clear_text"
                    app:helperTextTextColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textInputEmail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextHomepage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:focusable="true"
                        android:enabled="true"
                        android:focusableInTouchMode="true"
                        android:maxLength="30"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/locationButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:backgroundTint="@color/glaucous"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toStartOf="@id/inputTextPhoneNumber"
                    app:layout_constraintTop_toBottomOf="@id/inputTextPhoneNumber"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/notificationButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/glaucous"
                    android:text="Notifications"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/inputTextPhoneNumber"
                    app:layout_constraintTop_toBottomOf="@id/locationButton"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Save"
                    android:textColor="@color/black"
                    android:layout_marginEnd="36dp"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/coral"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>
