...
                        app:boxStrokeWidth="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textInputDescription">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextAnnouncements"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:gravity="top|start"
                            android:textColor="@color/black" />
...
